# tribev2

./: .gitignore
tribev2/: LICENSE  predict_tribe_timeseries.py  pyproject.toml  tribe_audio.ipynb  tribe_demo.ipynb
tribev2/src/japaneeg/: __init__.py  download.py
tribev2/tribev2/: eventstransforms.py  main.py  pl_module.py
tribev2/tribev2/grids/: defaults.py  test_run.py
tribev2/tribev2/studies/: __init__.py  japaneeg.py
