[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tribev2"
version = "0.1.0"
description = "Deep multimodal brain encoding"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Meta Platforms, Inc."}]

dependencies = [
  "neuralset==0.0.2",
  "neuraltrain==0.0.2",
  "torch>=2.5.1,<2.7",
  "numpy==2.2.6",
  "torchvision>=0.20,<0.22",
  "x_transformers==1.27.20",
  "einops",
  "pyyaml",
  "moviepy>=2.2.1",
  "huggingface_hub",
  "gtts",
  "langdetect",
  "spacy",
  "soundfile",
  "pip",
  "Levenshtein",
  "julius",
  "transformers",
  # Japan EEG dataset dependencies
  "openneuro-py>=2024.2.0",
  "mne>=1.7.0",
  "mne-bids>=0.18.0",
  "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/tribev2"
Repository = "https://github.com/facebookresearch/tribev2"

[project.optional-dependencies]
  plotting = [
    "nibabel",
    "matplotlib",
    "seaborn",
    "colorcet",
    "nilearn",
    "scipy",
    "pyvista",
    "scikit-image",
  ]
  training = [
    "nibabel",
    "torchmetrics",
    "wandb",
    "lightning",
  ]
  test = [
    "pytest",
  ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["tribe*"]
[project]
name = "japaneeg"
version = "0.1.0"
description = "Japan EEG dataset from OpenNeuro (ds007600)"
readme = "README.md"
requires-python = ">=3.12"
license = "CC0-1.0"
dependencies = [
    "openneuro-py>=2024.2.0",
    "mne>=1.7.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "mne-bids>=0.18.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/japaneeg"]
